--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@curiecode/lamechain",
-	"version": "0.0.000001",
+	"version": "0.0.4",
 	"license": "LAMC",
 	"main": "index.ts",
 	"engines": {
@@ -8,7 +8,8 @@
 	},
 	"private": false,
 	"scripts": {
-		"build": "tsc && tsx ./docs/tools/embed",
+		"build": "tsc && tsx ./docs/tools/embed && cp *.md ./dist",
+		"release": "yarn build && (cd dist && yarn publish)",
 		"ex:train": "tsx ./examples/training",
 		"ex:pipe": "tsx ./examples/pipe"
 	},
